# flat_poster

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
config/: search_queries.yaml  settings.yaml
docs/: architecture.md  llm_prompts.md
scripts/: test_evaluate.sh  test_fetch.sh
src/: health_server.py  main.py
src/agents/: agent_runner.py  evaluator.py
src/agents/prompt_templates/: evaluation.yaml
src/cold_storage/: manager.py  strategies.py
src/config/: queries.py  settings.py
src/db/: engine.py  models.py  repository.py
src/notifier/: console.py  formatter.py  telegram.py
src/scheduler/: jobs.py  runner.py
src/scrapers/: base.py  cian.py
src/scrapers/parsers/: listing_parser.py  search_page_parser.py
tests/: conftest.py
tests/fixtures/: listing_page.html  search_page.html
tests/test_agents/: test_agent_runner.py  test_evaluator.py
tests/test_cold_storage/: test_manager.py  test_strategies.py
tests/test_notifier/: test_formatter.py  test_notifiers.py
tests/test_scheduler/: test_jobs.py  test_runner.py
tests/test_scrapers/: test_cian_scraper.py  test_listing_parser.py  test_search_page_parser.py
