[project]
name = "flat_parser"
version = "0.1.0"
description = "Autonomous real estate listing aggregator with LLM evaluation"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# SQLAlchemy Column[T] vs T assignment is a known pattern
disable_error_code = "assignment"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
